deployments/jenkins/003 - jenkins-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: pfd
spec:
  selector:
    pod: jenkins
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
