deployments/jenkins/004 - jenkins-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jm
  namespace: pfd
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  rules:
    - host: www.senegalsmart.com
      http:
        paths:
          - path: /
            backend:
              serviceName: example
              servicePort: 80
    - host: node1.senegalsmart.com
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins
              servicePort: 80
